--- a/startbootstrap-agency-gh-pages/html/index.html
+++ b/startbootstrap-agency-gh-pages/html/index.html
@@ -45,6 +45,7 @@
         <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
+                  <h2 class="section-heading text-uppercase">网页打开速度时快时慢，多等一下下吧，亲测内容正常 </h2>
                   <h2 class="section-heading text-uppercase">俺叫陈靖禹哒</h2>
                   <h3 class="section-subheading text-muted">猛男什么的是不存在的，肥宅快乐不香嘛</h3>
                 </div>
