--- a/startbootstrap-agency-gh-pages/html/index.html
+++ b/startbootstrap-agency-gh-pages/html/index.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-              <a href="https://ghostflycjy.github.io/me/startbootstrap-stylish-portfolio-gh-pages/html/index.html">返回322主页</a>
+              <a href="">返回322主页</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"> Menu <em class="fas fa-bars ml-1"></em></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
