--- a/startbootstrap-stylish-portfolio-gh-pages/html/index.html
+++ b/startbootstrap-stylish-portfolio-gh-pages/html/index.html
@@ -74,7 +74,7 @@
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <img src="../img/1.jpg" width="100" height="100" alt=""/>
           <h4>
-            <a href="https://ghostflycjy.github.io/322/">了解我吧</a>
+            <a href="https://ghostflycjy.github.io/me/startbootstrap-agency-gh-pages/html/index.html">了解我吧</a>
           </h4>
           <p class="text-faded mb-0">点击上方 </p>
           <p class="text-faded mb-0">俺是舍长</p>
@@ -101,7 +101,7 @@
         <div class="col-lg-3 col-md-6">
           <img src="../img/4.jpg" width="100" height="100" alt=""/>
           <h4>
-           <a href="https://ghostflycjy.github.io/322/">了解我吧</a>
+           <a href="http://zhangxuehao123.gitee.io/resurrection">了解我吧</a>
           </h4>
           <p class="text-faded mb-0">点击上方 </p>
           <p class="text-faded mb-0">狗子三号</p>
