--- a/startbootstrap-stylish-portfolio-gh-pages/html/index.html
+++ b/startbootstrap-stylish-portfolio-gh-pages/html/index.html
@@ -57,7 +57,7 @@
     <div class="container text-center my-auto">
       <h1 class="mb-1">322宿舍主页</h1>
       <h3 class="mb-5">&nbsp;</h3>
-      <a href="https://ghostflycjy.github.io/322/">返回班级主页</a>
+      <a href="http://judy_nick.gitee.io/class-webpage">返回班级主页</a>
     </div>
     <div class="overlay"></div>
   </header>
@@ -83,7 +83,7 @@
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <img src="../img/2.jpg" width="100" height="100" alt=""/>
           <h4>
-            <a href="https://ghostflycjy.github.io/322/">了解我吧</a>
+            <a href="http://fu-kundong.gitee.io/">了解我吧</a>
           </h4>
           <p class="text-faded mb-0">点击上方 </p>
           <p class="text-faded mb-0">狗子一号</p>
@@ -92,7 +92,7 @@
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <img src="../img/3.jpg" width="100" height="100" alt=""/>
           <h4>
-           <a href="https://ghostflycjy.github.io/322/">了解我吧</a>
+           <a href="http://zhangchennng.gitee.io/zhang-tams-website/%E7%88%B1%E6%83%85%E7%B1%BB.html">了解我吧</a>
           </h4>
           <p class="text-faded mb-0">点击上方 </p>
           <p class="text-faded mb-0">狗子二号</p>
